Position bookmark menu same as other menus

Bookmark menu was positioned a couple pixels higher to flush button
border for historical reason. Now bookmark button doesn't have border
any more, we should make the menu position consistent as the other
menus. Screenshots of before and after are in the following links:
https://screenshot.googleplex.com/Tib2cdtRG7P.png  (before)
https://screenshot.googleplex.com/xYOxCeXfbes.png  (after)

BUG=832672
TEST=Pls test bookmark menu drag and drop thoroughly, especially on
Windows, to make sure nothing is broken.

Change-Id: I977719e7ba6cbf7204c33ee5f238b9428ff236bf
Reviewed-on: https://chromium-review.googlesource.com/1033349
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Wei Li <weili@chromium.org>
Cr-Commit-Position: refs/heads/master@{#554952}
Former-commit-id: e4774fc79110aa35c59cb9ba3de3863b8e40d2a8